examples/griff/error/ErrorInvalidIdent.grf
module errorInvalidIdent = {
  let = {x f -> f x};
}